--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "uuid": "^11.1.0"
   },
   "autoload": {
     "App": "./app"
